--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     android:layout_marginTop="4dp"
@@ -17,6 +16,7 @@
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textAlignment="center"
+        android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,24 +24,26 @@
 
     <ImageView
         android:id="@+id/editNoteIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@android:drawable/ic_menu_edit"
+        android:layout_width="32dp"
+        android:layout_height="0dp"
+        android:background="#4CAF50"
         android:visibility="gone"
         android:contentDescription="Edit note"
-        app:tint="@color/white"
+        android:src="@drawable/ic_edit_small"
+        android:scaleType="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/deleteNoteIcon" />
 
     <ImageView
         android:id="@+id/deleteNoteIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@android:drawable/ic_menu_delete"
+        android:layout_width="32dp"
+        android:layout_height="0dp"
+        android:background="#F44336"
         android:visibility="gone"
         android:contentDescription="Delete note"
-        app:tint="@color/white"
+        android:src="@drawable/ic_delete_small"
+        android:scaleType="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
