--- a/app/src/main/res/drawable/edit_button_background.xml
+++ b/app/src/main/res/drawable/edit_button_background.xml
@@ -3,7 +3,7 @@
     android:color="#66FFFFFF">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#4CAF50" />
+            <solid android:color="#347638" />
             <corners android:radius="4dp" />
         </shape>
     </item>
