--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -26,7 +26,7 @@
         android:id="@+id/editNoteIcon"
         android:layout_width="32dp"
         android:layout_height="0dp"
-        android:background="#4CAF50"
+        android:background="@drawable/edit_button_background"
         android:visibility="gone"
         android:contentDescription="Edit note"
         android:src="@drawable/ic_edit_small"
@@ -39,7 +39,7 @@
         android:id="@+id/deleteNoteIcon"
         android:layout_width="32dp"
         android:layout_height="0dp"
-        android:background="#F44336"
+        android:background="@drawable/delete_button_background"
         android:visibility="gone"
         android:contentDescription="Delete note"
         android:src="@drawable/ic_delete_small"
