--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -9,6 +9,20 @@
     android:layout_marginBottom="4dp"
     android:background="@drawable/card_background">
 
+    <ImageView
+        android:id="@+id/dragHandle"
+        android:layout_width="32dp"
+        android:layout_height="0dp"
+        android:background="@drawable/drag_handle_background"
+        android:visibility="gone"
+        android:contentDescription="Drag to reorder"
+        android:src="@drawable/ic_drag_handle"
+        android:scaleType="center"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/noteText"
         android:layout_width="0dp"
@@ -17,7 +31,7 @@
         android:textSize="22sp"
         android:textAlignment="center"
         android:padding="8dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/dragHandle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/editNoteIcon" />
