--- a/app/src/main/res/drawable/drag_handle_background.xml
+++ b/app/src/main/res/drawable/drag_handle_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#33FFFFFF" />
+    <solid android:color="@color/card" />
     <corners android:radius="4dp" />
     <stroke
-        android:width="1dp"
-        android:color="#66FFFFFF" />
+        android:width="0dp"
+        android:color="@color/card" />
 </shape> 
