--- a/app/src/main/res/drawable/ic_drag_handle.xml
+++ b/app/src/main/res/drawable/ic_drag_handle.xml
@@ -3,8 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/colorOnSurface">
+    android:tint="@color/white">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M20,9H4v2h16V9zM4,15h16v-2H4V15z"/>
+      android:pathData="M20,9H4v2h16V9zM4,15h16v-2H4V15z"
+      />
 </vector> 
