--- a/app/src/main/res/layout/dialog_add_note.xml
+++ b/app/src/main/res/layout/dialog_add_note.xml
@@ -9,7 +9,7 @@
         android:id="@+id/noteInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Note Text"
+        android:hint="Task text"
         android:layout_marginBottom="16dp"
         app:layout_constraintTop_toTopOf="parent">
 
